--- a/src/App.css
+++ b/src/App.css
@@ -1,80 +1,135 @@
 .app {
-    font-family: sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 20px;
-    height: 100vh;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    background-image: url(./login_background.png);
-    background-position: center;
-    background-size: auto;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    height: 25px;
-    border-radius: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-  }
-  div[id="title"]{
-    text-align: center;
-  }
-  
-  button[id="login"] {
-    margin-top: 10px;
-    cursor: pointer;
-    font-size: 15px;
-    border-radius: 10px;
-    background: #01d28e;
-    border: 1px solid #01d28e;
-    color: #fff;
-    padding: 10px 20px;
-  }
-  
-  input[type="submit"]:hover {
-    background: #6cf0c2;
-  }
-   
-  .button-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  div[id="register"]{
-    padding-top: 20px;
-  }
+  font-family: 'Times New Roman', Times, serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  height: 100vh;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-image: url(/public/img/login_background.png);
+  background-position: center;
+  background-size: auto;
+}
 
-  a[id="link-register"]{
-    margin-left: 5px;
-    text-decoration: none;
-    color: #01d28e;
-  }
+input[type="text"],
+input[type="email"],
+input[type="date"],
+input[type="password"] {
+  height: 25px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
 
-  .login-form {
-    background-color: white;
-    padding: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  
-  .list-container {
-    display: flex;
-  }
-  
-  .error {
-    color: red;
-    font-size: 12px;
-  }
-  
-  .title {
-    font-size: 25px;
-    margin-bottom: 20px;
-  }
-  
-  .input-container {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    margin: 10px;
-  }
+div[id="title"] {
+  text-align: center;
+}
+
+button[id="login"] {
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 15px;
+  border-radius: 10px;
+  background: #01d28e;
+  border: 1px solid #01d28e;
+  color: #fff;
+  padding: 10px 20px;
+}
+
+input[type="submit"]:hover {
+  background: #6cf0c2;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+div[id="register"] {
+  padding-top: 20px;
+}
+
+a[id="link-register"] {
+  margin-left: 5px;
+  text-decoration: none;
+  color: #01d28e;
+}
+
+.login-form {
+  background-color: white;
+  padding: 2rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.list-container {
+  display: flex;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+}
+
+.title {
+  font-size: 30px;
+  margin-bottom: 30px;
+  font-weight: 700;
+}
+
+.button1 {
+  min-width: 100px;
+  text-align: center;
+  background-color: #fff;
+  color: #0068ff;
+  border-radius: 30px;
+  font-size: 1rem;
+  display: inline-block;
+  padding: 12px;
+  margin-right: 80px;
+  line-height: 1;
+  border: 1px solid transparent;
+  font-weight: 700;
+  border: 1px #0068ff solid;
+  text-decoration: none;
+}
+.button2 {
+  min-width: 100px;
+  text-align: center;
+  background-color: #0068ff;
+  color: #fff;
+  border-radius: 30px;
+  font-size: 1rem;
+  display: inline-block;
+  text-decoration: none;
+
+  padding: 12px;
+  line-height: 1;
+  border: 1px solid transparent;
+  font-weight: 700;
+}
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 10px;
+  padding-bottom: 15px;
+}
+
+.select-container {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  background: #F6F6F6;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.name {
+  font-size: 20px;
+}
+
+.input {
+  padding: 10px;
+
+  font-size: 20px;
+}
